# raycasting

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bmp.cpp  bmp.h  camera.cpp  camera.h  main.cpp  math.cpp  math.h  player.cpp  player.h  screen.cpp  screen.h  util.cpp  util.h  webbuild.sh  webrunlocal.sh  world.cpp  world.h
